crates/compiler/parser/tests/snapshots/expressions::nested_index.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { matrix[i][j]; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                IndexAccess {
                                    array: Spanned(
                                        IndexAccess {
                                            array: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "matrix",
                                                        14..20,
                                                    ),
                                                ),
                                                14..20,
                                            ),
                                            index: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "i",
                                                        21..22,
                                                    ),
                                                ),
                                                21..22,
                                            ),
                                        },
                                        14..22,
                                    ),
                                    index: Spanned(
                                        Identifier(
                                            Spanned(
                                                "j",
                                                24..25,
                                            ),
                                        ),
                                        24..25,
                                    ),
                                },
                                14..25,
                            ),
                        ),
                        14..27,
                    ),
                ],
            },
            0..29,
        ),
    ),
]
