crates/compiler/parser/tests/snapshots/expressions::nested_member_access.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { obj.inner.field; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                MemberAccess {
                                    object: Spanned(
                                        MemberAccess {
                                            object: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "obj",
                                                        12..15,
                                                    ),
                                                ),
                                                12..15,
                                            ),
                                            field: Spanned(
                                                "inner",
                                                16..21,
                                            ),
                                        },
                                        12..21,
                                    ),
                                    field: Spanned(
                                        "field",
                                        22..27,
                                    ),
                                },
                                12..27,
                            ),
                        ),
                        12..28,
                    ),
                ],
            },
            0..30,
        ),
    ),
]
