crates/compiler/parser/tests/snapshots/expressions::nested_struct_literal.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { Rectangle { top_left: Point { x: 0, y: 0 }, width: 10 }; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                StructLiteral {
                                    name: Spanned(
                                        "Rectangle",
                                        14..23,
                                    ),
                                    fields: [
                                        (
                                            Spanned(
                                                "top_left",
                                                26..34,
                                            ),
                                            Spanned(
                                                StructLiteral {
                                                    name: Spanned(
                                                        "Point",
                                                        36..41,
                                                    ),
                                                    fields: [
                                                        (
                                                            Spanned(
                                                                "x",
                                                                44..45,
                                                            ),
                                                            Spanned(
                                                                Literal(
                                                                    0,
                                                                ),
                                                                47..48,
                                                            ),
                                                        ),
                                                        (
                                                            Spanned(
                                                                "y",
                                                                50..51,
                                                            ),
                                                            Spanned(
                                                                Literal(
                                                                    0,
                                                                ),
                                                                53..54,
                                                            ),
                                                        ),
                                                    ],
                                                },
                                                36..56,
                                            ),
                                        ),
                                        (
                                            Spanned(
                                                "width",
                                                58..63,
                                            ),
                                            Spanned(
                                                Literal(
                                                    10,
                                                ),
                                                65..67,
                                            ),
                                        ),
                                    ],
                                },
                                14..69,
                            ),
                        ),
                        14..70,
                    ),
                ],
            },
            0..72,
        ),
    ),
]
