crates/compiler/parser/tests/snapshots/expressions::parenthesized_expr.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { (a + b); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                BinaryOp {
                                    op: Add,
                                    left: Spanned(
                                        Identifier(
                                            Spanned(
                                                "a",
                                                15..16,
                                            ),
                                        ),
                                        15..16,
                                    ),
                                    right: Spanned(
                                        Identifier(
                                            Spanned(
                                                "b",
                                                19..20,
                                            ),
                                        ),
                                        19..20,
                                    ),
                                },
                                14..21,
                            ),
                        ),
                        14..22,
                    ),
                ],
            },
            0..24,
        ),
    ),
]
