crates/compiler/parser/tests/snapshots/expressions::precedence_chain.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { a || b && c == d + e * f / g - h; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                BinaryOp {
                                    op: Or,
                                    left: Spanned(
                                        Identifier(
                                            Spanned(
                                                "a",
                                                14..15,
                                            ),
                                        ),
                                        14..15,
                                    ),
                                    right: Spanned(
                                        BinaryOp {
                                            op: And,
                                            left: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "b",
                                                        19..20,
                                                    ),
                                                ),
                                                19..20,
                                            ),
                                            right: Spanned(
                                                BinaryOp {
                                                    op: Eq,
                                                    left: Spanned(
                                                        Identifier(
                                                            Spanned(
                                                                "c",
                                                                24..25,
                                                            ),
                                                        ),
                                                        24..25,
                                                    ),
                                                    right: Spanned(
                                                        BinaryOp {
                                                            op: Sub,
                                                            left: Spanned(
                                                                BinaryOp {
                                                                    op: Add,
                                                                    left: Spanned(
                                                                        Identifier(
                                                                            Spanned(
                                                                                "d",
                                                                                29..30,
                                                                            ),
                                                                        ),
                                                                        29..30,
                                                                    ),
                                                                    right: Spanned(
                                                                        BinaryOp {
                                                                            op: Div,
                                                                            left: Spanned(
                                                                                BinaryOp {
                                                                                    op: Mul,
                                                                                    left: Spanned(
                                                                                        Identifier(
                                                                                            Spanned(
                                                                                                "e",
                                                                                                33..34,
                                                                                            ),
                                                                                        ),
                                                                                        33..34,
                                                                                    ),
                                                                                    right: Spanned(
                                                                                        Identifier(
                                                                                            Spanned(
                                                                                                "f",
                                                                                                37..38,
                                                                                            ),
                                                                                        ),
                                                                                        37..38,
                                                                                    ),
                                                                                },
                                                                                33..38,
                                                                            ),
                                                                            right: Spanned(
                                                                                Identifier(
                                                                                    Spanned(
                                                                                        "g",
                                                                                        41..42,
                                                                                    ),
                                                                                ),
                                                                                41..42,
                                                                            ),
                                                                        },
                                                                        33..42,
                                                                    ),
                                                                },
                                                                29..42,
                                                            ),
                                                            right: Spanned(
                                                                Identifier(
                                                                    Spanned(
                                                                        "h",
                                                                        45..46,
                                                                    ),
                                                                ),
                                                                45..46,
                                                            ),
                                                        },
                                                        29..46,
                                                    ),
                                                },
                                                24..46,
                                            ),
                                        },
                                        19..46,
                                    ),
                                },
                                14..46,
                            ),
                        ),
                        14..47,
                    ),
                ],
            },
            0..49,
        ),
    ),
]
