crates/compiler/parser/tests/snapshots/expressions::simple_function_call.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { foo(); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                FunctionCall {
                                    callee: Spanned(
                                        Identifier(
                                            Spanned(
                                                "foo",
                                                12..15,
                                            ),
                                        ),
                                        12..15,
                                    ),
                                    args: [],
                                },
                                12..17,
                            ),
                        ),
                        12..18,
                    ),
                ],
            },
            0..20,
        ),
    ),
]
