crates/compiler/parser/tests/snapshots/expressions::simple_identifier.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { my_var; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Identifier(
                                    Spanned(
                                        "my_var",
                                        12..18,
                                    ),
                                ),
                                12..18,
                            ),
                        ),
                        12..19,
                    ),
                ],
            },
            0..21,
        ),
    ),
]
