crates/compiler/parser/tests/snapshots/expressions::simple_member_access.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { obj.field; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                MemberAccess {
                                    object: Spanned(
                                        Identifier(
                                            Spanned(
                                                "obj",
                                                14..17,
                                            ),
                                        ),
                                        14..17,
                                    ),
                                    field: Spanned(
                                        "field",
                                        18..23,
                                    ),
                                },
                                14..23,
                            ),
                        ),
                        14..24,
                    ),
                ],
            },
            0..26,
        ),
    ),
]
