crates/compiler/parser/tests/snapshots/expressions::simple_tuple.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { (1, 2, 3); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Tuple(
                                    [
                                        Spanned(
                                            Literal(
                                                1,
                                            ),
                                            15..16,
                                        ),
                                        Spanned(
                                            Literal(
                                                2,
                                            ),
                                            18..19,
                                        ),
                                        Spanned(
                                            Literal(
                                                3,
                                            ),
                                            21..22,
                                        ),
                                    ],
                                ),
                                14..23,
                            ),
                        ),
                        14..24,
                    ),
                ],
            },
            0..26,
        ),
    ),
]
