crates/compiler/parser/tests/snapshots/expressions::single_element_tuple.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { (single_element,); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Identifier(
                                    Spanned(
                                        "single_element",
                                        15..29,
                                    ),
                                ),
                                14..31,
                            ),
                        ),
                        14..32,
                    ),
                ],
            },
            0..34,
        ),
    ),
]
