crates/compiler/parser/tests/snapshots/expressions::trailing_comma_function_call.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { foo(a, b, c,); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                FunctionCall {
                                    callee: Spanned(
                                        Identifier(
                                            Spanned(
                                                "foo",
                                                12..15,
                                            ),
                                        ),
                                        12..15,
                                    ),
                                    args: [
                                        Spanned(
                                            Identifier(
                                                Spanned(
                                                    "a",
                                                    16..17,
                                                ),
                                            ),
                                            16..17,
                                        ),
                                        Spanned(
                                            Identifier(
                                                Spanned(
                                                    "b",
                                                    19..20,
                                                ),
                                            ),
                                            19..20,
                                        ),
                                        Spanned(
                                            Identifier(
                                                Spanned(
                                                    "c",
                                                    22..23,
                                                ),
                                            ),
                                            22..23,
                                        ),
                                    ],
                                },
                                12..23,
                            ),
                        ),
                        12..26,
                    ),
                ],
            },
            0..28,
        ),
    ),
]
